HW_8_K8S/k8s-manifest/lesta-start-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesta-start
  labels:
    app: lesta-start
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lesta-start
  template:
    metadata:
      labels:
        app: lesta-start
    spec:
      containers:
      - name: lesta-start
        image: lesta-start:7.1
        ports:
        - containerPort: 8887
