HW_8_K8S/k8s-manifest/lesta-start-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesta-start-service
spec:
  selector:
    app: lesta-start
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8887
  type: ClusterIP
