HW_8_K8S/k8s-manifest/lesta-start-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lesta-start-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lesta.example.com       # поменяй на свой домен или ip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lesta-start-service
            port:
              number: 80
